--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "finance"
   ],
   "author": "IT-BAER",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "engines": {
     "node": ">=20.0.0"
   },
