Security hardening (CORS/CSP/headers/rate limits), JWT expiry + Remember Me; fix /api/transactions placeholders & IN guard; dashboard: monthly category + recents, include incomes in shared view, remove 'dataPreloaded' label; pie chart uncategorized label; remove Income vs Expenses from Dashboard; i18n fixes incl. login success + new 'Uncategorized'; setup: CORS via domain; SW excludes auth; build verified

--- a/.env
+++ b/.env
@@ -15,6 +15,10 @@ JWT_SECRET=change_me_strong_jwt_secret
 DISABLE_REGISTRATION=true
 
 # Optional development auto-login (DO NOT enable in production)
-# DEV_MODE=true
-# DEV_MODE_ADMIN_EMAIL=admin@finx.local
-# DEV_MODE_ADMIN_PASSWORD=devpassword
+#DEV_MODE=true
+#DEV_MODE_ADMIN_EMAIL=admin@finx.local
+#DEV_MODE_ADMIN_PASSWORD=devpassword
+
+# Production CORS allowlist (comma-separated origins)
+# CORS_ORIGIN=https://your-frontend.example.com
+
