Sharing: enable R/W for recurring rules by shared users; scope by allowed source names (income→target, expense→source). Transactions: align visibility/can_edit and delete with income name fallback; access helper enriches allowed names. UI: unify Save button styling in EditTransaction. Dockerfile.backend: minor tweak.

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -7,7 +7,7 @@ COPY . .
 
 # Production stage
 FROM node:20-alpine
-RUN apk add --no-cache postgresql-client
+RUN apk add --no-cache postgresql-client curl
 WORKDIR /app
 ENV NODE_ENV=production
 
@@ -26,6 +26,9 @@ RUN npm ci --omit=dev
 
 # Copy the rest of the application code
 COPY --from=builder /app .
+
+# Ensure shell scripts are executable and have UNIX line endings
+RUN chmod +x scripts/*.sh && sed -i 's/\r$//' scripts/*.sh
 
 EXPOSE 5000
 
