Docker/Health: fix healthchecks (curl in images; exec-form in compose) and install curl in frontend image. Installer: support systems without sudo via doas or su re-exec; preserve args and align run_as_user. Docs: update README (user edits retained).

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -33,6 +33,6 @@ USER finx
 EXPOSE 5000
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-  CMD wget -q --spider http://localhost:5000/health || exit 1
+  CMD curl -fsS http://localhost:5000/health || exit 1
 
 CMD ["./scripts/start-backend.sh"]
