--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       db:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl -f http://localhost:5000/health || exit 1"]
+      test: ["CMD", "curl", "-fsS", "http://localhost:5000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
