--- a/package.json
+++ b/package.json
@@ -43,9 +43,16 @@
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
+    "react": "^19.1.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
+    "eslint": "^9.34.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.3.0",
     "nodemon": "^3.1.9"
   }
 }
