chore: bump version to 0.6.4 and update dependencies
- Updated version in package.json and package-lock.json to 0.6.4
- Adjusted postcss version to 8.4.49 in frontend/package.json
- Upgraded vite-plugin-pwa to version 1.1.0 in frontend/package.json
- Updated version in pwa.js to reflect the new version
- Enhanced setup.sh to support archive-based updates with proper extraction handling

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ frontend/.turbo
 # Development and documentation files
 .editorconfig
 .nvmrc
+tasksync
 # docs are part of the repository
 # docs/
 TODO.md
