--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
+    "expo-document-picker": "^14.0.8",
+    "expo-file-system": "^19.0.20",
+    "expo-sharing": "^14.0.8",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
     "helmet": "^7.2.0",
