--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finx",
-  "version": "0.7.3",
+  "version": "0.7.4",
   "description": "A modern personal finance management application",
   "main": "server.js",
   "scripts": {
@@ -44,6 +44,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
     "helmet": "^7.2.0",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "pg": "^8.13.1",
