--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,6 @@ on:
   push:
     tags:
       - 'v*'
-  workflow_dispatch:
 
 permissions:
   contents: write
@@ -12,6 +11,7 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
     
     steps:
       - name: Checkout code
@@ -21,27 +21,25 @@ jobs:
         id: changelog
         run: |
           # Get the version from the tag (e.g., v0.7.4 -> 0.7.4)
-          VERSION=${GITHUB_REF#refs/tags/v}
+          VERSION="${GITHUB_REF#refs/tags/v}"
           echo "Extracting changelog for version: $VERSION"
           
           # Extract the section for this version from CHANGELOG.md
-          # Looks for ## [X.Y.Z] or ## [vX.Y.Z] and captures until the next ## or end
-          NOTES=$(awk -v ver="$VERSION" '
+          # Uses awk with version passed as variable to avoid quoting issues
+          awk -v ver="$VERSION" '
             BEGIN { found=0 }
-            /^## \[v?'"$VERSION"'\]/ { found=1; next }
+            $0 ~ "^## \\[v?" ver "\\]" { found=1; next }
             /^## \[/ { if(found) exit }
             found { print }
-          ' CHANGELOG.md)
+          ' CHANGELOG.md > release_notes.md
           
           # If no notes found, use a default message
-          if [ -z "$NOTES" ]; then
-            NOTES="Release $VERSION"
+          if [ ! -s release_notes.md ]; then
+            echo "Release v$VERSION" > release_notes.md
             echo "No changelog entry found for version $VERSION, using default message"
           fi
           
-          # Write to output file (handles multiline)
-          echo "$NOTES" > release_notes.md
-          echo "Release notes extracted successfully"
+          echo "Release notes extracted successfully:"
           cat release_notes.md
 
       - name: Create GitHub Release
