--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,18 @@
 {
   "name": "finx-frontend",
   "private": true,
-  "version": "0.7.2",
+  "version": "0.8.0",
   "type": "module",
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "start": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "test-pwa": "node test-pwa.js",
-    "build-pwa": "vite build && echo 'PWA build complete! Run npm run serve to test install prompt'",
     "audit": "npm audit --audit-level moderate",
     "update-deps": "npm update"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.16",
     "axios": "^1.12.0",
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
@@ -24,14 +23,18 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.1",
     "styled-components": "^6.1.19",
-    "swiper": "^10.0.0"
+    "swiper": "^10.0.0",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.3.6",
-    "vite-plugin-pwa": "^1.1.0"
+    "typescript": "^5.9.3",
+    "vite": "^6.3.6"
   }
 }
