--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finx",
-  "version": "0.7.4",
+  "version": "0.8.0",
   "description": "A modern personal finance management application",
   "main": "server.js",
   "scripts": {
@@ -51,15 +51,19 @@
     "react": "^19.1.1",
     "uuid": "^9.0.1",
     "winston": "^3.19.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
     "eslint": "^9.34.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "typescript-eslint": "^8.51.0"
   }
 }
