fix(reports): Fix Balance Trend chart and time-range averages v0.8.2
- Balance Trend (Saldoentwicklung) now calculates initial balance from transactions before date range
- Web behavior aligned with mobile for accurate running balance display
- Time-range-aware average expenses: daily (weekly view), weekly (monthly view), monthly (yearly view)
- Fixed DATE type timezone issues in PostgreSQL by returning strings instead of Date objects
- Refactored source ID extraction into reusable helper function

--- a/.gitignore
+++ b/.gitignore
@@ -98,5 +98,9 @@ temp/
 .github/instructions
 .github/agents
 
+# Expo artifacts (in case accidentally created in wrong folder)
+.expo/
+nul
+
 ASSETS
 context.md
