--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finx",
-  "version": "0.8.4",
+  "version": "0.8.5",
   "description": "A modern personal finance management application",
   "main": "server.js",
   "scripts": {
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
+    "@types/react": "~19.1.10",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
     "eslint": "^9.34.0",
